date_field added

--- a/inno/health/templates/health/patient_list.html
+++ b/inno/health/templates/health/patient_list.html
@@ -4,7 +4,7 @@
 
     <h1>List of Patients : </h1>
       <ol>
-        {% for p in patient_list %}
+        {% for p in stuff %}
           <h2><li><a href="{{p.id}}/">{{p.name}} </a></li></h2>
         {% endfor %}
       </ol>
